objects/AnnulmentTimeLimit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CS used to configure annulment time limit based in the Order Location and Channel</description>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Sales Channel. One of the value configured in Store Location.Channel__c field</description>
        <label>Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <description>Location Code that identify the Location. Corresponding yo Location.LocationCode__c</description>
        <label>LocationCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeLimit__c</fullName>
        <description>The allowed time limit in days for Order annulment</description>
        <label>TimeLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AnnulmentTimeLimit</label>
</CustomObject>